[project]
name = "spotify-usage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dash>=4.4.0",
    "jupyterlab>=4.5.8",
    "python-dotenv>=1.2.2",
    "quoi",
]

[dependency-groups]
dev = [
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 120

[tool.uv.sources]
quoi = { git = "https://github.com/jojustleft/quoi" }
